--- a/PythonTest.ipynb
+++ b/PythonTest.ipynb
@@ -673,7 +673,7 @@
     "\n",
     "Напишите функцию, раскладывающую число на простые множители.\n",
     "\n",
-    "По числу $n$ нужно вернуть список пар $(p_i, c_i)$ такой, что $\\prod_i~p_i^{c_i} = n$"
+    "По числу $n$ нужно вернуть список пар $(p_i, c_i)$ такой, что $\\prod_i p_i^{c_i} = n$"
    ]
   },
   {
@@ -1010,7 +1010,7 @@
     "\n",
     "Допишите реализацию класса для обучения полиномиальной регресии, то есть по точкам $x_1, x_2, \\dots, x_n$ и $y_1, y_2, \\dots, y_n$ и заданному числу $d$ решить оптимизационную задачу:\n",
     "\n",
-    "$$ \\sum_{i=1}^n (~f(x_i) - y_i~)^2 \\min_f,$$ где f – полином степени не выше $d$."
+    "$$ \\sum_{i=1}^n (f(x_i) - y_i)^2 \\rightarrow \\min_f,$$ где f – полином степени не выше $d$."
    ]
   },
   {
@@ -1090,7 +1090,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Вопрос не для теста: как вы бы объяснили, что графики меняются таким образом?"
+    "Дополнительный вопрос (не для теста): как вы бы объяснили, почему графики меняются таким образом?"
    ]
   },
   {
