--- a/PythonTest.ipynb
+++ b/PythonTest.ipynb
@@ -1010,7 +1010,7 @@
     "\n",
     "Допишите реализацию класса для обучения полиномиальной регресии, то есть по точкам $x_1, x_2, \\dots, x_n$ и $y_1, y_2, \\dots, y_n$ и заданному числу $d$ решить оптимизационную задачу:\n",
     "\n",
-    "$$ \\sum_{i=1}^n (f(x_i) - y_i)^2 \\rightarrow \\min_f,$$ где f – полином степени не выше $d$."
+    "$$ \\sum_{i=1}^n (f(x_i) - y_i)^2 \\rightarrow \\min\\limits_f,$$ где f – полином степени не выше $d$."
    ]
   },
   {
