--- a/PythonTest.ipynb
+++ b/PythonTest.ipynb
@@ -661,7 +661,7 @@
    "source": [
     "print(sum([\n",
     "    len(subset) - sum(subset) + sum(subset) ** 2\n",
-    "    for subset in check_7(set(range(2, 21, 3)))\n",
+    "    for subset in function_7(set(range(2, 21, 3)))\n",
     "]))"
    ]
   },
@@ -1133,18 +1133,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
   }
  },
  "nbformat": 4,
