--- a/PythonTest.ipynb
+++ b/PythonTest.ipynb
@@ -913,8 +913,9 @@
    "outputs": [],
    "source": [
     "np.random.seed(42)\n",
-    "arr = function_9(np.random.uniform(size=1000000))\n",
-    "print(int(arr[7] + arr[42] + arr[445677] + arr[53422]))"
+    "arr1 = np.random.uniform(size=(1, 100000))\n",
+    "arr2 = np.random.uniform(size=(100000, 1))\n",
+    "print(int(function_10(arr1) + function_10(arr2)))"
    ]
   },
   {
